Separated level layout and background
This doubles the potential size of a level to $80 256x256 tiles wide.
Updated SonLVL.ini to take advantage of the bigger levels.

--- a/SonLVL.ini
+++ b/SonLVL.ini
@@ -1,5 +1,5 @@
 version=S1
-levelwidthmax=64
+levelwidthmax=128
 levelheightmax=8
 colarr1=Collision/Collision Array (Normal).bin
 colarr2=Collision/Collision Array (Rotated).bin
@@ -9,52 +9,55 @@ romfile=s1built.bin
 chunkcmp=Uncompressed
 blockcmp=Uncompressed
 tilecmp=Uncompressed
+layoutfmt=Custom
+layoutcodefile=SonLVL.cs
+layoutcodetype=CustomLayout.CustomLayout
 
 [Green Hill Zone Act 1]
 tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
-fglayout=Level Layouts/ghz1.bin
-bglayout=Level Layouts/ghzbg.bin
+fglayout=Level Layouts/ghz1.unc
+bglayout=Level Layouts/ghzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Green Hill Zone.bin:0:16:48
 colind=Collision/GHZ.bin
 loopchunks=35
-animtiles1=Graphics/GHZ Waterfall.bin:0:0x378:8
-animtiles2=Graphics/GHZ Flower Large.bin:0:0x35C:16
-animtiles3=Graphics/GHZ Flower Small.bin:0:0x36C:12
+animtiles1=Graphics/GHZ Waterfall.bin:0:0x36C:8
+animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
+animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Green Hill Zone Act 2]
 tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
-fglayout=Level Layouts/ghz2.bin
-bglayout=Level Layouts/ghzbg.bin
+fglayout=Level Layouts/ghz2.unc
+bglayout=Level Layouts/ghzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Green Hill Zone.bin:0:16:48
 colind=Collision/GHZ.bin
 loopchunks=35
-animtiles1=Graphics/GHZ Waterfall.bin:0:0x378:8
-animtiles2=Graphics/GHZ Flower Large.bin:0:0x35C:16
-animtiles3=Graphics/GHZ Flower Small.bin:0:0x36C:12
+animtiles1=Graphics/GHZ Waterfall.bin:0:0x36C:8
+animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
+animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Green Hill Zone Act 3]
 tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
-fglayout=Level Layouts/ghz3.bin
-bglayout=Level Layouts/ghzbg.bin
+fglayout=Level Layouts/ghz3.unc
+bglayout=Level Layouts/ghzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Green Hill Zone.bin:0:16:48
 colind=Collision/GHZ.bin
 loopchunks=35
-animtiles1=Graphics/GHZ Waterfall.bin:0:0x378:8
-animtiles2=Graphics/GHZ Flower Large.bin:0:0x35C:16
-animtiles3=Graphics/GHZ Flower Small.bin:0:0x36C:12
+animtiles1=Graphics/GHZ Waterfall.bin:0:0x36C:8
+animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
+animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Marble Zone Act 1]
 tiles=Graphics Kosinski/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
-fglayout=Level Layouts/mz1.bin
-bglayout=Level Layouts/mz1bg.bin
+fglayout=Level Layouts/mz1.unc
+bglayout=Level Layouts/mz1bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Marble Zone.bin:0:16:48
 colind=Collision/MZ.bin
 animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
@@ -64,8 +67,8 @@ animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 tiles=Graphics Kosinski/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
-fglayout=Level Layouts/mz2.bin
-bglayout=Level Layouts/mz2bg.bin
+fglayout=Level Layouts/mz2.unc
+bglayout=Level Layouts/mz2bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Marble Zone.bin:0:16:48
 colind=Collision/MZ.bin
 animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
@@ -75,8 +78,8 @@ animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 tiles=Graphics Kosinski/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
-fglayout=Level Layouts/mz3.bin
-bglayout=Level Layouts/mz3bg.bin
+fglayout=Level Layouts/mz3.unc
+bglayout=Level Layouts/mz3bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Marble Zone.bin:0:16:48
 colind=Collision/MZ.bin
 animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
@@ -86,8 +89,8 @@ animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 tiles=Graphics Kosinski/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
-fglayout=Level Layouts/syz1.bin
-bglayout=Level Layouts/syzbg (JP1).bin
+fglayout=Level Layouts/syz1.unc
+bglayout=Level Layouts/syzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
@@ -95,8 +98,8 @@ colind=Collision/SYZ.bin
 tiles=Graphics Kosinski/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
-fglayout=Level Layouts/syz2.bin
-bglayout=Level Layouts/syzbg (JP1).bin
+fglayout=Level Layouts/syz2.unc
+bglayout=Level Layouts/syzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
@@ -104,8 +107,8 @@ colind=Collision/SYZ.bin
 tiles=Graphics Kosinski/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
-fglayout=Level Layouts/syz3.bin
-bglayout=Level Layouts/syzbg (JP1).bin
+fglayout=Level Layouts/syz3.unc
+bglayout=Level Layouts/syzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
@@ -113,8 +116,8 @@ colind=Collision/SYZ.bin
 tiles=Graphics Kosinski/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
-fglayout=Level Layouts/lz1.bin
-bglayout=Level Layouts/lzbg.bin
+fglayout=Level Layouts/lz1.unc
+bglayout=Level Layouts/lzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
@@ -122,8 +125,8 @@ colind=Collision/LZ.bin
 tiles=Graphics Kosinski/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
-fglayout=Level Layouts/lz2.bin
-bglayout=Level Layouts/lzbg.bin
+fglayout=Level Layouts/lz2.unc
+bglayout=Level Layouts/lzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
@@ -131,8 +134,8 @@ colind=Collision/LZ.bin
 tiles=Graphics Kosinski/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
-fglayout=Level Layouts/lz3.bin
-bglayout=Level Layouts/lzbg.bin
+fglayout=Level Layouts/lz3.unc
+bglayout=Level Layouts/lzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
@@ -140,8 +143,8 @@ colind=Collision/LZ.bin
 tiles=Graphics Kosinski/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
-fglayout=Level Layouts/slz1.bin
-bglayout=Level Layouts/slzbg.bin
+fglayout=Level Layouts/slz1.unc
+bglayout=Level Layouts/slzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Star Light Zone.bin:0:16:48
 colind=Collision/SLZ.bin
 loopchunks=2A,34
@@ -150,8 +153,8 @@ loopchunks=2A,34
 tiles=Graphics Kosinski/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
-fglayout=Level Layouts/slz2.bin
-bglayout=Level Layouts/slzbg.bin
+fglayout=Level Layouts/slz2.unc
+bglayout=Level Layouts/slzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Star Light Zone.bin:0:16:48
 colind=Collision/SLZ.bin
 loopchunks=2A,34
@@ -160,8 +163,8 @@ loopchunks=2A,34
 tiles=Graphics Kosinski/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
-fglayout=Level Layouts/slz3.bin
-bglayout=Level Layouts/slzbg.bin
+fglayout=Level Layouts/slz3.unc
+bglayout=Level Layouts/slzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Star Light Zone.bin:0:16:48
 colind=Collision/SLZ.bin
 loopchunks=2A,34
@@ -170,8 +173,8 @@ loopchunks=2A,34
 tiles=Graphics Kosinski/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
-fglayout=Level Layouts/sbz1.bin
-bglayout=Level Layouts/sbz1bg.bin
+fglayout=Level Layouts/sbz1.unc
+bglayout=Level Layouts/sbz1bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 1.bin:0:16:48
 colind=Collision/SBZ.bin
 animtiles1=Graphics/SBZ Background Smoke.bin:0:0x2A9:12
@@ -181,8 +184,8 @@ animtiles2=Graphics/SBZ Background Smoke.bin:0:0x2B5:12
 tiles=Graphics Kosinski/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
-fglayout=Level Layouts/sbz2.bin
-bglayout=Level Layouts/sbz2bg.bin
+fglayout=Level Layouts/sbz2.unc
+bglayout=Level Layouts/sbz2bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 2.bin:0:16:48
 colind=Collision/SBZ.bin
 
@@ -190,8 +193,8 @@ colind=Collision/SBZ.bin
 tiles=Graphics Kosinski/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
-fglayout=Level Layouts/sbz3.bin
-bglayout=Level Layouts/lzbg.bin
+fglayout=Level Layouts/sbz3.unc
+bglayout=Level Layouts/lzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 3.bin:0:16:48
 colind=Collision/LZ.bin
 
@@ -199,8 +202,8 @@ colind=Collision/LZ.bin
 tiles=Graphics Kosinski/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
-fglayout=Level Layouts/sbz2.bin
-bglayout=Level Layouts/sbz2bg.bin
+fglayout=Level Layouts/sbz2.unc
+bglayout=Level Layouts/sbz2bg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 2.bin:0:16:48
 colind=Collision/SBZ.bin
 
@@ -208,9 +211,10 @@ colind=Collision/SBZ.bin
 tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
-fglayout=Level Layouts/ending.bin
-bglayout=Level Layouts/ghzbg.bin
+fglayout=Level Layouts/ending.unc
+bglayout=Level Layouts/ghzbg.unc
 palette=Palettes/Sonic.bin:0:0:16|Palettes/Green Hill Zone.bin:0:16:48
 colind=Collision/GHZ.bin
-animtiles2=Graphics/GHZ Flower Large.bin:0:0x35C:16
-animtiles3=Graphics/GHZ Flower Small.bin:0:0x36C:12
+animtiles1=Graphics/GHZ Waterfall.bin:0:0x36C:8
+animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
+animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
