Added FloorDist subroutine
Works like FindFloor except it's much simpler and has customisable range.

--- a/SonLVL.ini
+++ b/SonLVL.ini
@@ -14,7 +14,7 @@ layoutcodefile=SonLVL.cs
 layoutcodetype=CustomLayout.CustomLayout
 
 [Green Hill Zone Act 1]
-tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
+tiles=Graphics Moduled/GHZ Main.bin|Graphics Moduled/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
 fglayout=Level Layouts/ghz1.unc
@@ -27,7 +27,7 @@ animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
 animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Green Hill Zone Act 2]
-tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
+tiles=Graphics Moduled/GHZ Main.bin|Graphics Moduled/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
 fglayout=Level Layouts/ghz2.unc
@@ -40,7 +40,7 @@ animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
 animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Green Hill Zone Act 3]
-tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
+tiles=Graphics Moduled/GHZ Main.bin|Graphics Moduled/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
 fglayout=Level Layouts/ghz3.unc
@@ -53,7 +53,7 @@ animtiles2=Graphics/GHZ Flower Large.bin:0:0x350:16
 animtiles3=Graphics/GHZ Flower Small.bin:0:0x360:12
 
 [Marble Zone Act 1]
-tiles=Graphics Kosinski/MZ Main.bin
+tiles=Graphics Moduled/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
 fglayout=Level Layouts/mz1.unc
@@ -64,7 +64,7 @@ animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
 animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 
 [Marble Zone Act 2]
-tiles=Graphics Kosinski/MZ Main.bin
+tiles=Graphics Moduled/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
 fglayout=Level Layouts/mz2.unc
@@ -75,7 +75,7 @@ animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
 animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 
 [Marble Zone Act 3]
-tiles=Graphics Kosinski/MZ Main.bin
+tiles=Graphics Moduled/MZ Main.bin
 blocks=16x16 Mappings/MZ.bin
 chunks=256x256 Mappings/MZ.unc
 fglayout=Level Layouts/mz3.unc
@@ -86,7 +86,7 @@ animtiles1=Graphics/MZ Lava Surface.bin:0:0x2AD:8
 animtiles2=Graphics/MZ Background Torch.bin:0:0x297:6
 
 [Spring Yard Zone Act 1]
-tiles=Graphics Kosinski/SYZ Main.bin
+tiles=Graphics Moduled/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
 fglayout=Level Layouts/syz1.unc
@@ -95,7 +95,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
 [Spring Yard Zone Act 2]
-tiles=Graphics Kosinski/SYZ Main.bin
+tiles=Graphics Moduled/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
 fglayout=Level Layouts/syz2.unc
@@ -104,7 +104,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
 [Spring Yard Zone Act 3]
-tiles=Graphics Kosinski/SYZ Main.bin
+tiles=Graphics Moduled/SYZ Main.bin
 blocks=16x16 Mappings/SYZ.bin
 chunks=256x256 Mappings/SYZ.unc
 fglayout=Level Layouts/syz3.unc
@@ -113,7 +113,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Spring Yard Zone.bin:0:16:48
 colind=Collision/SYZ.bin
 
 [Labyrinth Zone Act 1]
-tiles=Graphics Kosinski/LZ Main.bin
+tiles=Graphics Moduled/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
 fglayout=Level Layouts/lz1.unc
@@ -122,7 +122,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
 [Labyrinth Zone Act 2]
-tiles=Graphics Kosinski/LZ Main.bin
+tiles=Graphics Moduled/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
 fglayout=Level Layouts/lz2.unc
@@ -131,7 +131,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
 [Labyrinth Zone Act 3]
-tiles=Graphics Kosinski/LZ Main.bin
+tiles=Graphics Moduled/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
 fglayout=Level Layouts/lz3.unc
@@ -140,7 +140,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/Labyrinth Zone.bin:0:16:48
 colind=Collision/LZ.bin
 
 [Star Light Zone Act 1]
-tiles=Graphics Kosinski/SLZ Main.bin
+tiles=Graphics Moduled/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
 fglayout=Level Layouts/slz1.unc
@@ -150,7 +150,7 @@ colind=Collision/SLZ.bin
 loopchunks=2A,34
 
 [Star Light Zone Act 2]
-tiles=Graphics Kosinski/SLZ Main.bin
+tiles=Graphics Moduled/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
 fglayout=Level Layouts/slz2.unc
@@ -160,7 +160,7 @@ colind=Collision/SLZ.bin
 loopchunks=2A,34
 
 [Star Light Zone Act 3]
-tiles=Graphics Kosinski/SLZ Main.bin
+tiles=Graphics Moduled/SLZ Main.bin
 blocks=16x16 Mappings/SLZ.bin
 chunks=256x256 Mappings/SLZ.unc
 fglayout=Level Layouts/slz3.unc
@@ -170,7 +170,7 @@ colind=Collision/SLZ.bin
 loopchunks=2A,34
 
 [Scrap Brain Zone Act 1]
-tiles=Graphics Kosinski/SBZ Main.bin
+tiles=Graphics Moduled/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
 fglayout=Level Layouts/sbz1.unc
@@ -181,7 +181,7 @@ animtiles1=Graphics/SBZ Background Smoke.bin:0:0x2A9:12
 animtiles2=Graphics/SBZ Background Smoke.bin:0:0x2B5:12
 
 [Scrap Brain Zone Act 2]
-tiles=Graphics Kosinski/SBZ Main.bin
+tiles=Graphics Moduled/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
 fglayout=Level Layouts/sbz2.unc
@@ -190,7 +190,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 2.bin:0:16:48
 colind=Collision/SBZ.bin
 
 [Scrap Brain Zone Act 3]
-tiles=Graphics Kosinski/LZ Main.bin
+tiles=Graphics Moduled/LZ Main.bin
 blocks=16x16 Mappings/LZ.bin
 chunks=256x256 Mappings/LZ.unc
 fglayout=Level Layouts/sbz3.unc
@@ -199,7 +199,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 3.bin:0:16:48
 colind=Collision/LZ.bin
 
 [Final Zone]
-tiles=Graphics Kosinski/SBZ Main.bin
+tiles=Graphics Moduled/SBZ Main.bin
 blocks=16x16 Mappings/SBZ.bin
 chunks=256x256 Mappings/SBZ.unc
 fglayout=Level Layouts/sbz2.unc
@@ -208,7 +208,7 @@ palette=Palettes/Sonic.bin:0:0:16|Palettes/SBZ Act 2.bin:0:16:48
 colind=Collision/SBZ.bin
 
 [Ending]
-tiles=Graphics Kosinski/GHZ Main.bin|Graphics Kosinski/GHZ Main2.bin
+tiles=Graphics Moduled/GHZ Main.bin|Graphics Moduled/GHZ Main2.bin
 blocks=16x16 Mappings/GHZ.bin
 chunks=256x256 Mappings/GHZ.unc
 fglayout=Level Layouts/ending.unc
